# VegaFEM-cmake

./: .travis.yml  CMakeLists.txt  LICENSE  README  ReadMe.rst  appveyor.yml
src/: CMakeLists.txt
src/libObjMesh/: CMakeLists.txt
src/libcamera/: CMakeLists.txt  camera.cpp
src/libclothBW/: CMakeLists.txt  clothBW.cpp  clothBW.h  clothBWFromObjMesh.cpp  clothBWFromObjMesh.h  clothBWMT.cpp  clothBWMT.h
src/libconfigFile/: CMakeLists.txt  configFile.cpp
src/libcorotationalLinearFEM/: CMakeLists.txt  corotationalLinearFEM.cpp  corotationalLinearFEM.h  corotationalLinearFEMMT.cpp  corotationalLinearFEMMT.h
src/libelasticForceModel/: CMakeLists.txt  StVKForceModel.cpp  StVKForceModel.h  corotationalLinearFEMForceModel.cpp  corotationalLinearFEMForceModel.h  isotropicHyperelasticFEMForceModel.cpp  isotropicHyperelasticFEMForceModel.h  linearFEMForceModel.cpp  linearFEMForceModel.h  massSpringSystemForceModel.cpp  massSpringSystemForceModel.h
src/libforceModel/: CMakeLists.txt  forceModel.cpp  forceModel.h
src/libgetopts/: CMakeLists.txt  getopts.cpp
src/libglslPhong/: CMakeLists.txt  glslPhong.cpp  glslPhong.h
src/libgraph/: CMakeLists.txt  graph.cpp  graph.h
src/libhashTable/: CMakeLists.txt  hashTable.cpp  hashTable.h
src/libimageIO/: CMakeLists.txt  imageIO.cpp
src/libinsertRows/: CMakeLists.txt  insertRows.cpp  insertRows.h
src/libintegrator/: CMakeLists.txt  centralDifferencesSparse.cpp  centralDifferencesSparse.h  eulerSparse.cpp  eulerSparse.h  implicitBackwardEulerSparse.cpp  implicitBackwardEulerSparse.h  implicitNewmarkSparse.cpp  implicitNewmarkSparse.h  integratorBase.cpp  integratorBase.h  integratorBaseSparse.cpp  integratorBaseSparse.h  integratorSolverSelection.h  integrators.h
src/libintegratorDense/: CMakeLists.txt  IPIVC.h  centralDifferencesDense.cpp  centralDifferencesDense.h  implicitBackwardEulerDense.cpp  implicitBackwardEulerDense.h  implicitNewmarkDense.cpp  implicitNewmarkDense.h  integratorBaseDense.cpp  integratorBaseDense.h
src/libintegratorSparse/: CMakeLists.txt  centralDifferencesSparse.cpp  centralDifferencesSparse.h  eulerSparse.cpp  eulerSparse.h  implicitBackwardEulerSparse.cpp  implicitNewmarkSparse.cpp  integratorBaseSparse.cpp
src/libisotropicHyperelasticFEM/: CMakeLists.txt  MooneyRivlinIsotropicMaterial.cpp  MooneyRivlinIsotropicMaterial.h  StVKIsotropicMaterial.cpp  StVKIsotropicMaterial.h  homogeneousMooneyRivlinIsotropicMaterial.cpp  homogeneousMooneyRivlinIsotropicMaterial.h  homogeneousNeoHookeanIsotropicMaterial.cpp  homogeneousNeoHookeanIsotropicMaterial.h  homogeneousStVKIsotropicMaterial.cpp  homogeneousStVKIsotropicMaterial.h  isotropicHyperelasticFEM.cpp  isotropicHyperelasticFEM.h  isotropicHyperelasticFEMMT.cpp  isotropicHyperelasticFEMMT.h  isotropicMaterial.cpp  isotropicMaterial.h  isotropicMaterialWithCompressionResistance.cpp  neoHookeanIsotropicMaterial.cpp  neoHookeanIsotropicMaterial.h
src/liblighting/: CMakeLists.txt  lighting.cpp  lighting.h
src/libloadList/: CMakeLists.txt  loadList.cpp  loadList.h
src/libmassSpringSystem/: CMakeLists.txt  massSpringSystem.cpp  massSpringSystem.h  massSpringSystemFromCubicMesh.cpp  massSpringSystemFromCubicMesh.h  massSpringSystemFromCubicMeshConfigFile.cpp  massSpringSystemFromCubicMeshConfigFile.h  massSpringSystemFromObjMesh.cpp  massSpringSystemFromObjMesh.h  massSpringSystemFromObjMeshConfigFile.cpp  massSpringSystemFromObjMeshConfigFile.h  massSpringSystemFromTetMesh.cpp  massSpringSystemFromTetMesh.h  massSpringSystemFromTetMeshConfigFile.cpp  massSpringSystemFromTetMeshConfigFile.h  massSpringSystemMT.cpp  massSpringSystemMT.h  renderSprings.cpp  renderSprings.h
src/libmatrix/: .CMakeLists.txt.swp  CMakeLists.txt  example.cpp  expokit_xgpadm.h  matrix.cpp  matrix.h  matrixBLAS.cpp  matrixBLAS.h  matrixBLASOptimized.cpp  matrixBLASVanilla.cpp  matrixExp.cpp  matrixExp.h  matrixIO.cpp  matrixIO.h  matrixLAPACK.cpp  matrixLAPACK.h  matrixMacros.h  matrixPCA.cpp  matrixPCA.h  matrixProjection.cpp  matrixProjection.h
src/libmatrixIO/: CMakeLists.txt  matrixIO.cpp  matrixIO.h  matrixMacros.h
src/libminivector/: CMakeLists.txt  eig3.cpp  eig3.h  mat3d.cpp  mat3d.h
src/libmodalMatrix/: CMakeLists.txt  modalMatrix.cpp  modalMatrix.h
src/libobjMesh/: CMakeLists.txt  boundingBox.cpp  boundingBox.h  objMesh-disjointSet.cpp  objMesh.cpp  objMesh.h  objMeshBinaryLoader.cpp  objMeshBinaryLoader.h  objMeshEncode.cpp  objMeshEncode.h  objMeshOctree.cpp  objMeshOctree.h  objMeshOffsetVoxels.cpp  objMeshOrientable.cpp  objMeshOrientable.h  objMeshRender.cpp  objMeshRender.h  octree.cpp  simpleSphere.cpp  triangle-closestPoint.cpp  triangle.cpp  tribox3.cpp
src/libobjMeshGPUDeformer/: CMakeLists.txt  coarseToFine-shaders.cpp  glh_extensions.h  glh_genext.h  objMeshGPUDeformer.cpp  objMeshGPUDeformer.h  objMeshGPUDeformer_coarseToFine.cpp  objMeshGPUDeformer_coarseToFine.h  objMeshGPUDeformer_coarseToFine_fbo.cpp  objMeshGPUDeformer_coarseToFine_fbo.h  objMeshGPUDeformer_uUq.cpp  objMeshGPUDeformer_uUq.h  objMeshGPUDeformer_uUq_fbo.cpp  objMeshGPUDeformer_uUq_fbo.h  objMeshGPUDeformer_uUq_pbuffer.cpp  objMeshGPUDeformer_uUq_pbuffer.h  objMeshGPUDeformer_uUq_setLighting.cpp  objMeshGPUDeformer_uUq_setLighting.h  uUq-shaders.cpp  vbo.cpp  vbo.h
src/libopenGLHelper/: CMakeLists.txt  openGLHelper.cpp  openGLHelper.h  printBitmap.cpp  printBitmap.h  saveScreenShot.cpp  saveScreenShot.h
src/libperformanceCounter/: CMakeLists.txt
src/libpolarDecomposition/: CMakeLists.txt  polarDecomposition.cpp
src/libquaternion/: CMakeLists.txt  example.cpp  quaternion.cpp  quaternion.h
src/libreducedElasticForceModel/: CMakeLists.txt  reducedLinearForceModel.cpp  reducedLinearForceModel.h  reducedLinearStVKForceModel.cpp  reducedLinearStVKForceModel.h  reducedMassSpringSystemForceModel.cpp  reducedMassSpringSystemForceModel.h  reducedMassSpringSystemForceModelWithHessian.cpp  reducedMassSpringSystemForceModelWithHessian.h  reducedSpringForceModel.cpp  reducedSpringForceModel.h  reducedStVKForceModel.cpp  reducedStVKForceModel.h  reducedStVKForceModelWithHessian.cpp  (+3 more)
(+392 files in other folders)
