add_subdirectory(libconfigFile)
add_subdirectory(libgetopts)
add_subdirectory(libloadList)
add_subdirectory(libcamera)
add_subdirectory(libperformanceCounter)
add_subdirectory(libminivector)
add_subdirectory(libinsertRows)
add_subdirectory(libmatrix)
add_subdirectory(libsparseMatrix)
add_subdirectory(libsparseSolver)
add_subdirectory(liblighting)
add_subdirectory(libgraph)
add_subdirectory(libforceModel)
add_subdirectory(libpolarDecomposition)
add_subdirectory(libObjMesh)
add_subdirectory(libsceneObject)
add_subdirectory(libvolumetricMesh)
add_subdirectory(libstvk)
add_subdirectory(libmassSpringSystem)
add_subdirectory(libisotropicHyperelasticFEM)
add_subdirectory(libcorotationalLinearFEM)
add_subdirectory(libelasticForceModel)
add_subdirectory(libintegrator)
