add_subdirectory(libminivector)
add_subdirectory(libmatrixIO)
add_subdirectory(libsparseMatrix)
add_subdirectory(libgraph)
add_subdirectory(libimageIO)
add_subdirectory(libobjMesh)
add_subdirectory(libconfigFile)
add_subdirectory(liblighting)
add_subdirectory(libsceneObject)
add_subdirectory(libintegrator)
add_subdirectory(libperformanceCounter)
add_subdirectory(libinsertRows)
add_subdirectory(libsparseSolver)
add_subdirectory(libforceModel)
add_subdirectory(libintegratorSparse)
add_subdirectory(libpolarDecomposition)
add_subdirectory(libvolumetricMesh)
add_subdirectory(libcorotationalLinearFEM)
add_subdirectory(libmassSpringSystem)
add_subdirectory(libstvk)
add_subdirectory(libisotropicHyperelasticFEM)
add_subdirectory(libelasticForceModel)
add_subdirectory(libloadList)
add_subdirectory(libvega-getopts)
add_subdirectory(libcamera)

if(BUILD_MODEL_REDUCTION)
	add_subdirectory(libhashTable)
	add_subdirectory(libquaternion)
	add_subdirectory(libglslPhong)
	add_subdirectory(libmatrix)
	add_subdirectory(libopenGLHelper)
	add_subdirectory(libmodalMatrix)
	add_subdirectory(libreducedForceModel)
	add_subdirectory(libobjMeshGPUDeformer)
	add_subdirectory(libsceneObjectReduced)
	add_subdirectory(librenderVolumetricMesh)
	add_subdirectory(libreducedStvk)
	add_subdirectory(libreducedElasticForceModel)
	add_subdirectory(libintegratorDense)
	add_subdirectory(libclothBW)
	add_subdirectory(librigidBodyDynamics)
endif(BUILD_MODEL_REDUCTION)

add_subdirectory(util/interactiveDeformableSimulator)
add_subdirectory(util/volumetricMeshUtilities)
