vega_add_library(corotationalLinearFEM
  SOURCES
    corotationalLinearFEM.cpp
    corotationalLinearFEMMT.cpp
  PUBLIC_HEADERS
    corotationalLinearFEM.h
    corotationalLinearFEMMT.h
)
target_link_libraries(corotationalLinearFEM
  PUBLIC
    polarDecomposition
    volumetricMesh
    sparseMatrix
  INTERFACE
    minivector
)
