set(EFM_SRCS
  corotationalLinearFEMForceModel.cpp
  massSpringSystemForceModel.cpp
  StVKForceModel.cpp
  isotropicHyperelasticFEMForceModel.cpp
  linearFEMForceModel.cpp
)

vega_add_library(elasticForceModel
  SOURCES ${EFM_SRCS}
  PUBLIC_HEADERS
    StVKForceModel.h
    corotationalLinearFEMForceModel.h
    isotropicHyperelasticFEMForceModel.h
    linearFEMForceModel.h
    massSpringSystemForceModel.h
)
target_link_libraries(elasticForceModel
  PUBLIC
    forceModel
    corotationalLinearFEM
    massSpringSystem
    stvk
    isotropicHyperelasticFEM
  INTERFACE
    sparseMatrix
    minivector
    volumetricMesh
)
