vega_add_library(integrator
  SOURCES
    integratorBase.cpp
    getIntegratorSolver.cpp
  PUBLIC_HEADERS
    getIntegratorSolver.h
    integratorBase.h
    integratorSolverSelection.h
)
target_include_directories(integrator
  PUBLIC
    ${PARDISO_INCLUDE_DIRS}
)
target_link_libraries(integrator
  PUBLIC
    performanceCounter
    insertRows
    sparseSolver
    forceModel
  INTERFACE
    sparseMatrix
    insertRows
)
