vega_add_library(integratordense
  SOURCES
    centralDifferencesDense.cpp
    implicitBackwardEulerDense.cpp
    implicitNewmarkDense.cpp
    integratorBaseDense.cpp
  PUBLIC_HEADERS
    IPIVC.h
    centralDifferencesDense.h
    implicitBackwardEulerDense.h
    implicitNewmarkDense.h
    integratorBaseDense.h
)
target_link_libraries(integratordense
  PUBLIC
    matrix
    integrator
    performanceCounter
    reducedForceModel
)
