vega_add_library(integratorDense
  SOURCES
    centralDifferencesDense.cpp
    implicitBackwardEulerDense.cpp
    implicitNewmarkDense.cpp
    integratorBaseDense.cpp
  PUBLIC_HEADERS
    IPIVC.h
    centralDifferencesDense.h
    implicitBackwardEulerDense.h
    implicitNewmarkDense.h
    integratorBaseDense.h
)
target_link_libraries(integratorDense
  PUBLIC
    matrix
    integrator
    performanceCounter
    reducedForceModel
    ${BLAS}
    ${CBLAS_LIBRARY}
    ${LAPACK_LIBRARIES}
)
